# ensnare-v1

./: .gitignore  Cargo.toml  LICENSE.md  LICENSE.txt  NOTES.md  README.md  precheck  settings.json
core/: Cargo.toml
core/src/: audio.rs  bus_route.rs  control.rs  controllers.rs  drag_drop.rs  entities.rs  even_smaller_sequencer.rs  generators.rs  humidifier.rs  instruments.rs  lib.rs  midi.rs  midi_interface.rs  midi_router.rs  mini_sequencer.rs  modulators.rs  orchestration.rs  piano_roll.rs  rng.rs  selection_set.rs  sequence_repository.rs  time.rs  track.rs  traits.rs  types.rs  uid.rs  utils.rs  voices.rs
core/src/composition/: arrangement.rs  composer.rs  mod.rs  note.rs  pattern.rs
core/src/composition/sequencers/: midi.rs  mod.rs  note.rs  pattern.rs
core/src/entities/: factory.rs  mod.rs
core/src/entities/controllers/: arpeggiator.rs  calculator.rs  control.rs  keyboard.rs  lfo.rs  mod.rs  old_sequencer.rs
core/src/entities/effects/: bitcrusher.rs  chorus.rs  compressor.rs  delay.rs  filter.rs  gain.rs  limiter.rs  mixer.rs  mod.rs  reverb.rs
core/src/entities/instruments/: drumkit.rs  fm.rs  mod.rs  sampler.rs  welsh.rs
core/src/entities/toys/: controllers.rs  effects.rs  instruments.rs  mod.rs  synth.rs
core/src/panels/: audio_panel.rs  control_panel.rs  midi_panel.rs  mod.rs  orchestrator_panel.rs  palette_panel.rs
core/src/stuff/: arpeggiator.rs  bitcrusher.rs  chorus.rs  compressor.rs  delay.rs  drumkit.rs  filter.rs  fm.rs  gain.rs  lfo.rs  limiter.rs  mixer.rs  mod.rs  reverb.rs  sampler.rs  test.rs  welsh.rs
core/src/stuff/toys/: controllers.rs  effects.rs  instruments.rs  mod.rs  synth.rs
core/src/temp_impls/: mod.rs
core/src/temp_impls/controllers/: arpeggiator.rs  mod.rs  old_sequencer.rs
core/src/temp_impls/effects/: chorus.rs  delay.rs  filter.rs  gain.rs  mod.rs  reverb.rs
core/src/temp_impls/instruments/: mod.rs  welsh.rs
core/src/toys/: controllers.rs  instruments.rs
core/src/widgets/: audio.rs  control.rs  controllers.rs  core.rs  generators.rs  misc.rs  mod.rs  modulators.rs  parts.rs  pattern.rs  placeholder.rs  timeline.rs  track.rs
cores/: Cargo.toml
cores-egui/: Cargo.toml
cores-egui/src/: common.rs  composition.rs  lib.rs  modulators.rs  piano_roll.rs  transport.rs
cores-egui/src/controllers/: keyboard.rs  mod.rs
cores-egui/src/effects/: mod.rs
cores-egui/src/instruments/: fm.rs  mod.rs
cores-egui/src/widgets/: audio.rs  mod.rs  parts.rs  pattern.rs  timeline.rs
cores/src/: lib.rs
cores/src/controllers/: arpeggiator.rs  lfo.rs  mod.rs  passthrough.rs  test.rs  util.rs
cores/src/controllers/sequencers/: midi.rs  mod.rs  note.rs  pattern.rs  thin.rs
cores/src/effects/: bitcrusher.rs  chorus.rs  compressor.rs  delay.rs  filter.rs  gain.rs  limiter.rs  mixer.rs  mod.rs  reverb.rs  test.rs
cores/src/instruments/: drumkit.rs  fm.rs  mod.rs  sampler.rs  test.rs  welsh.rs
cores/src/toys/: controllers.rs  effects.rs  instruments.rs  mod.rs  synth.rs
devices/: Cargo.toml
devices/src/: lib.rs
devices/src/controllers/: arpeggiator.rs  mod.rs
devices/src/controllers/sequencers/: mod.rs
drag-drop/: Cargo.toml
drag-drop/src/: drag_drop.rs  lib.rs
egui/: Cargo.toml
egui-widgets/: Cargo.toml
egui-widgets/src/: audio.rs  control_bar.rs  core.rs  generators.rs  lib.rs  misc.rs  modulators.rs  types.rs  util.rs
egui/src/: control.rs  controllers.rs  drag_drop.rs  generators.rs  lib.rs  modulators.rs  orchestration.rs  piano_roll.rs  toys.rs  track.rs  transport.rs
egui/src/controllers/: keyboard.rs  mod.rs
egui/src/effects/: mod.rs
egui/src/instruments/: fm.rs  mod.rs
egui/src/widgets/: audio.rs  core.rs  generators.rs  misc.rs  mod.rs  parts.rs  pattern.rs  placeholder.rs  timeline.rs  track.rs
entities/: Cargo.toml
entities-toy/: Cargo.toml
entities-toy/src/: controllers.rs  effects.rs  factory.rs  instruments.rs  lib.rs
entities/factory/: Cargo.toml
entities/factory/src/: factory.rs  lib.rs  piano_roll.rs
entities/factory/src/controllers/: keyboard.rs  mod.rs
entities/factory/src/effects/: mod.rs
entities/src/: entities.rs  factory.rs  lib.rs
entities/src/controllers/: arpeggiator.rs  calculator.rs  lfo.rs  mod.rs  old_sequencer.rs
entities/src/effects/: bitcrusher.rs  chorus.rs  delay.rs  filter.rs  gain.rs  reverb.rs
entities/src/instruments/: drumkit.rs  fm.rs  mod.rs  sampler.rs  welsh.rs
entities/test/: Cargo.toml
entities/test/src/: controllers.rs  effects.rs  factory.rs  instruments.rs  lib.rs
entity/: Cargo.toml
entity/src/: factory.rs  lib.rs  test_entities.rs  toy_entities.rs  traits.rs  uid.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
new-stuff/: Cargo.toml
new-stuff/src/: automation.rs  composition.rs  lib.rs  midi.rs  orchestration.rs  parts.rs  project.rs  repositories.rs  types.rs
new-stuff/src/egui/: composer.rs  cursor.rs  entities.rs  grid.rs  legend.rs  mod.rs  project.rs  signal_chain.rs  timeline.rs  track.rs
new-stuff/src/foo/: mod.rs
orchestration/: Cargo.toml
orchestration/src/: bus_route.rs  control_router.rs  humidifier.rs  lib.rs  main_mixer.rs  midi_router.rs  orchestration.rs  track.rs  traits.rs
orchestration/src/egui/: mod.rs  orchestrator.rs  palette.rs  project.rs  signal_chain.rs  track.rs
proc-macros/: Cargo.toml
proc-macros/src/: control.rs  entity.rs  inner.rs  lib.rs  metadata.rs  params.rs  uid.rs
services/: Cargo.toml
services/src/: audio.rs  control_bar.rs  lib.rs  midi.rs  midi_interface.rs  orchestrator.rs  project.rs
services/src/egui/: audio.rs  control_bar.rs  midi.rs  mod.rs
systems/: Cargo.toml
systems/src/: audio_panel.rs  control_panel.rs  lib.rs  midi_panel.rs  orchestrator_panel.rs  palette_panel.rs
test-entities/: Cargo.toml
test-entities/src/: lib.rs
toy-entities/: Cargo.toml
toy-entities/src/: controllers.rs  effects.rs  factory.rs  instruments.rs  lib.rs
toys/: Cargo.toml
toys/src/: controllers.rs  effects.rs  factory.rs  instruments.rs  lib.rs
toys/src/cores/: controllers.rs  effects.rs  instruments.rs  mod.rs  synth.rs
(+360 files in other folders)
