# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
default-run = "ensnare-daw"
description = "Audio tools"
documentation = "https://docs.rs/ensnare/"
edition = "2021"
homepage = "https://ensnare.rs"
license = "MIT"
name = "ensnare"
readme = "README.md"
repository = "https://github.com/ensnare-org/ensnare"
version = "0.0.2"

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
delegate = "0.10.0"
derive_more = "0.99.17"
eframe = "0.24"
egui-toast = { git = "https://github.com/urholaukkarinen/egui-toast/" }
egui_extras = { version = "0.24", features = ["all_loaders"] }
ensnare-core = { path = "core" }
ensnare-cores = { path = "cores" }
ensnare-drag-drop = { path = "drag-drop" }
ensnare-cores-egui = { path = "cores-egui" }
ensnare-egui-widgets = { path = "egui-widgets" }
ensnare-entity = { path = "entity" }
ensnare-entities = { path = "entities", features = ["factory"] }
ensnare-entities-toy = { path = "entities-toy" }
ensnare-orchestration = { path = "orchestration" }
ensnare-proc-macros = { path = "proc-macros" }
ensnare-services = { path = "services" }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.25.2"
thiserror = "1.0.50"

[workspace]
members = [
    "core",
    "cores",
    "cores-egui",
    "egui-widgets",
    "entities",
    "entities-toy",
    "entity",
    "orchestration",
    "proc-macros",
    "services",
]

[dev-dependencies]
clap = { version = "4.4.4", features = ["derive"] }
egui_extras_xt = { git = "https://github.com/xTibor/egui_extras_xt/", features = [
    "knobs",
    "displays",
] }
ensnare-entities = { path = "entities", features = ["test"] }
strum = "0.25.0"
typetag = "0.2.13"

regex = "1.7"

[[bin]]
name = "ensnare-daw"

[lib]
name = "ensnare"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/aarch64:latest"
xargo = false

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/armv7:latest"
xargo = false

[package.metadata.deb]
assets = [
    # "You can use target/release/ in asset paths, even if Cargo is configured
    # to cross-compile or use custom CARGO_TARGET_DIR. The target dir paths will
    # be automatically corrected." https://github.com/kornelski/cargo-deb
    ["LICENSE.md", "usr/share/doc/ensnare/LICENSE.md", "644"],
    ["README.md", "usr/share/doc/ensnare/README.md", "644"],
    ["assets-nodist/os/ensnare.desktop", "usr/share/applications/", "644"],
    ["assets/patches/**/*.json", "usr/share/ensnare/patches/", "644"],
    ["assets/samples/**/*.wav", "usr/share/ensnare/samples/", "644"],
    ["projects/**/*.json", "usr/share/ensnare/projects/", "644"],
    ["target/release/ensnare-daw", "usr/bin/", "755"],
]
