# Copyright (c) 2023 Mike Tsao. All rights reserved.

[workspace.package]
authors = ["Mike Tsao <mike@sowbug.com>"]
documentation = "https://docs.rs/ensnare/"
edition = "2021"
license = "MIT"
repository = "https://github.com/ensnare-org/ensnare"
version = "0.0.3"

[package]
name = "ensnare"
description = "Audio tools"
default-run = "ensnare-daw"
homepage = "https://ensnare.rs"
readme = "README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
cpal = "0.15.2"
crossbeam = "0.8.4"
crossbeam-channel = "0.5"
delegate = "0.12"
derivative = "2.2.0"
derive_more = "0.99.17"
eframe = "0.25"
egui-toast = "0.11"
egui_extras = { version = "0.25", features = ["all_loaders"] }
ensnare-core = { version = "0.0.3", path = "core" }
ensnare-cores = { version = "0.0.3", path = "cores" }
ensnare-cores-egui = { version = "0.0.3", path = "cores-egui" }
ensnare-drag-drop = { version = "0.0.3", path = "drag-drop" }
ensnare-egui-widgets = { version = "0.0.3", path = "egui-widgets" }
ensnare-entities-toy = { version = "0.0.3", path = "entities-toy" }
ensnare-entity = { version = "0.0.3", path = "entity" }
ensnare-proc-macros = { version = "0.0.3", path = "proc-macros" }
env_logger = "0.10"
hound = "3.5.1"
midir = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.50"
typetag = "0.2.14"

[features]
default = ["std", "test"]
std = []
test = []

[dev-dependencies]
clap = { version = "4.4.4", features = ["derive"] }
egui_extras_xt = { git = "https://github.com/xTibor/egui_extras_xt/", features = [
    "knobs",
    "displays",
] }
more-asserts = "0.3.1"
regex = "1.7"
strum = "0.26"
typetag = "0.2.13"

[[bin]]
name = "ensnare-daw"
required-features = ["std"]

[lib]
name = "ensnare"
path = "src/lib.rs"

[workspace]
members = [
    "core",
    "cores",
    "cores-egui",
    "egui-widgets",
    "entities-toy",
    "entity",
    "proc-macros",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/aarch64:latest"
xargo = false

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/armv7:latest"
xargo = false

[package.metadata.deb]
assets = [
    # "You can use target/release/ in asset paths, even if Cargo is configured
    # to cross-compile or use custom CARGO_TARGET_DIR. The target dir paths will
    # be automatically corrected." https://github.com/kornelski/cargo-deb
    ["LICENSE.md", "usr/share/doc/ensnare/LICENSE.md", "644"],
    ["README.md", "usr/share/doc/ensnare/README.md", "644"],
    ["assets-nodist/os/ensnare.desktop", "usr/share/applications/", "644"],
    ["assets/patches/**/*.json", "usr/share/ensnare/patches/", "644"],
    ["assets/samples/**/*.wav", "usr/share/ensnare/samples/", "644"],
    ["projects/**/*.json", "usr/share/ensnare/projects/", "644"],
    ["target/release/ensnare-daw", "usr/bin/", "755"],
]

[[example]]
name = "pocket-calculator"
required-features = ["std"]


[[example]]
name = "minidaw"
required-features = ["std"]
