# Copyright (c) 2023 Mike Tsao. All rights reserved.

[workspace.package]
authors = ["Mike Tsao <mike@sowbug.com>"]
documentation = "https://docs.rs/ensnare/"
edition = "2021"
license = "MIT"
repository = "https://github.com/ensnare-org/ensnare"
version = "0.0.17"

[package]
name = "ensnare"
description = "Audio tools"
default-run = "minidaw"
homepage = "https://ensnare.me"
readme = "README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
app_dirs2 = "2.5"                                                         # for utils::Paths
bit-vec = "0.6.3"
bounded-vec-deque = "0.1"                                                 # for VisualizationQueue
byteorder = "1.5.0"
convert_case = "0.6.0"
cpal = "0.15.2"
crossbeam = "0.8"
crossbeam-channel = "0.5"
delegate = "0.12"
derivative = "2.2.0"
derive_builder = "0.12.0"
derive_more = "0.99.17"
eframe = { version = "0.26", optional = true }
egui-notify = { version = "0.13", optional = true }
egui_dock = "0.11.2"
egui_extras = { version = "0.26", features = ["image"], optional = true }
ensnare-proc-macros = { path = "proc-macros" }
env_logger = "0.10"
float-cmp = "0.9.0"
getrandom = { version = "0.2.12", features = [] }
hound = "3.5.1"
include_dir = "0.7.3"
kahan = "0.1.4"                                                           # for Oscillator
midir = "0.9.1"
midly = "0.5.3"
nalgebra = "0.32.3"                                                       # for Envelope
native-dialog = "0.7.0"
nonoverlapping_interval_tree = "0.1.5"
once_cell = "1.19.0"
oorandom = "11.1.3"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spectrum-analyzer = "1.5.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.50"
typetag = "0.2.14"

[features]
default = ["std", "test", "egui"]
std = ["getrandom/std"]
test = []
egui = ["eframe", "egui-notify", "egui_extras"]

[dev-dependencies]
clap = { version = "4.4.4", features = ["derive"] }
egui_extras_xt = { git = "https://github.com/sowbug/egui_extras_xt/", features = [
    "knobs",
    "displays",
] }
ensnare-toys = { path = "toys" }
more-asserts = "0.3.1"
regex = "1.7"
strum = "0.26"
typetag = "0.2.13"

[[bin]]
name = "minidaw"
required-features = ["std", "egui"]

[lib]
name = "ensnare"
path = "src/lib.rs"

[workspace]
members = ["toys", "proc-macros"]

[package.metadata.docs.rs]
all-features = true

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/aarch64:latest"
xargo = false

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt -qq update",
    "apt -y install pkg-config libfontconfig-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]
# See https://github.com/iced-rs/iced/blob/master/Cross.toml
image = "ghcr.io/iced-rs/armv7:latest"
xargo = false

[package.metadata.deb]
name = "ensnare-minidaw"
assets = [
    # "You can use target/release/ in asset paths, even if Cargo is configured
    # to cross-compile or use custom CARGO_TARGET_DIR. The target dir paths will
    # be automatically corrected." https://github.com/kornelski/cargo-deb
    ["LICENSE.md", "usr/share/doc/ensnare/LICENSE.md", "644"],
    ["README.md", "usr/share/doc/ensnare/README.md", "644"],
    ["assets-nodist/os/minidaw.desktop", "usr/share/applications/", "644"],
    ["assets/patches/**/*.json", "usr/share/ensnare/patches/", "644"],
    ["assets/samples/**/*.wav", "usr/share/ensnare/samples/", "644"],
    ["projects/**/*.json", "usr/share/ensnare/projects/", "644"],
    ["target/release/minidaw", "usr/bin/", "755"],
]

[[example]]
name = "pocket-calculator"
required-features = ["std", "egui"]

[[example]]
name = "entity-gui-explorer"
required-features = ["std", "egui"]

# [[example]]
# name = "widget-explorer"
# required-features = ["std", "egui"]

[[example]]
name = "render"
required-features = ["std"]
