# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Core functionality supporting the ensnare crate"
edition = "2021"
name = "ensnare-core"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
app_dirs2 = "2.5"
cpal = "0.15.2"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
derive_builder = "0.12.0"
derive_more = "0.99.17"
ensnare-proc-macros = { path = "../proc-macros" }
float-cmp = "0.9.0"
hound = "3.5.0"
kahan = "0.1.4"
midir = "0.9"
midly = "0.5.3"
nalgebra = "0.32.3"
oorandom = "11.1.3"                               # TODO: this should be in [dev-dependencies]
strum = "0.25.0"
strum_macros = "0.25.2"

[dev-dependencies]
more-asserts = "0.3.1"
