# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-core"
description = "Core functionality supporting the ensnare crate"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
app_dirs2 = "2.5"                                      # for utils::Paths
bounded-vec-deque = "0.1"                              # for VisualizationQueue
crossbeam = "0.8"                                      # for ChannelPair
crossbeam-channel = "0.5"                              # for ChannelPair
delegate = "0.12"
derivative = "2.2.0"
derive_builder = "0.12.0"
derive_more = "0.99.17"
ensnare-proc-macros = { path = "../proc-macros" }
kahan = "0.1.4"                                        # for Oscillator
midly = "0.5.3"
nalgebra = "0.32.3"                                    # for Envelope
oorandom = "11.1.3"                                    # for RNG
serde = { version = "1.0.193", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"

[features]
default = ["std"]
std = []

[dev-dependencies]
float-cmp = "0.9.0"
hound = "3.5.0"
more-asserts = "0.3.1"
