# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Egui support for ensnare-cores"
edition = "2021"
name = "ensnare-cores-egui"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-cores = { path = "../cores" }
ensnare-drag-drop = { path = "../drag-drop" }
ensnare-egui-widgets = { path = "../egui-widgets" }
ensnare-entity = { path = "../entity" }
strum = "0.25"
