# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-cores-egui"
description = "Egui support for ensnare-cores"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-cores = { path = "../cores" }
ensnare-drag-drop = { path = "../drag-drop" }
ensnare-egui-widgets = { path = "../egui-widgets" }
ensnare-entity = { path = "../entity" }
strum = "0.26"
strum_macros = "0.26"
