# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Musical-instrument cores"
edition = "2021"
name = "ensnare-cores"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
bit-vec = "0.6.3"
delegate = "0.10.0"
derive_builder = "0.12.0"
ensnare-core = { path = "../core" }
ensnare-proc-macros = { path = "../proc-macros" }
float-cmp = "0.9.0"
hound = "3.5.0"
serde = { version = "1.0.193", features = ["derive"] }
typetag = "0.2.14"
strum = "0.25"
strum_macros = "0.25"

[dev-dependencies]
more-asserts = "0.3.1"
