# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-cores"
description = "Musical-instrument cores"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
bit-vec = "0.6.3"
delegate = "0.12"
derivative = "2.2.0"
derive_builder = "0.12.0"
ensnare-core = { path = "../core" }
ensnare-proc-macros = { path = "../proc-macros" }
float-cmp = "0.9.0"
hound = "3.5.0"
serde = { version = "1.0.193", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
more-asserts = "0.3.1"
