# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Basic musical devices"
edition = "2021"
name = "ensnare-devices"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
derive_builder = "0.12.0"
ensnare-core = { path = "../core" }
ensnare-proc-macros = { path = "../proc-macros" }
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
