# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Drag-and-drop functionality"
edition = "2021"
name = "ensnare-drag-drop"
publish = false
version = "0.1.0"

[dependencies]
eframe = "0.23"
ensnare-core = { path = "../core" }
once_cell = "1.18.0"
strum_macros = "0.25"
