# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-drag-drop"
description = "Drag-and-drop functionality"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-entity = { path = "../entity" }
once_cell = "1.18.0"
strum_macros = "0.26"
