# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Reusable egui widgets that might be useful outside this project"
edition = "2021"
name = "ensnare-egui-widgets"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
eframe = "0.25"
ensnare-core = { path = "../core" }
oorandom = "11.1.3"
spectrum-analyzer = "1.5.0"
strum = "0.25"
