# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-egui-widgets"
description = "Reusable egui widgets that might be useful outside this project"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
eframe = "0.25"
ensnare-core = { path = "../core" }
oorandom = "11.1.3"
spectrum-analyzer = "1.5.0"
strum = "0.26"
strum_macros = "0.26"
