# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "egui logic for drawing ensnare entities"
edition = "2021"
name = "ensnare-egui"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
derive_more = "0.99.17"
eframe = "0.23"
ensnare-core = { path = "../core" }
ensnare-drag-drop = { path = "../drag-drop" }
ensnare-egui-widgets = { path = "../egui-widgets" }
once_cell = "1.18.0"
#serde = { version = "1.0", features = ["derive"] }
spectrum-analyzer = "1.5.0"
strum = "0.25"
strum_macros = "0.25"
#typetag = "0.2.13"
