# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "egui logic for drawing ensnare entities"
edition = "2021"
name = "ensnare-egui"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
eframe = "0.23"
ensnare-core = { path = "../core" }
ensnare-cores = { path = "../cores" }
ensnare-drag-drop = { path = "../drag-drop" }
ensnare-egui-widgets = { path = "../egui-widgets" }
spectrum-analyzer = "1.5.0"
strum = "0.25"
