# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-entities-toy"
description = "Ensnare toy Entities that are included with the crate"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
delegate = "0.12"
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-cores = { path = "../cores" }
ensnare-cores-egui = { path = "../cores-egui" }
ensnare-egui-widgets = { path = "../egui-widgets" }
ensnare-entity = { path = "../entity" }
ensnare-proc-macros = { path = "../proc-macros" }
serde = { version = "1.0.193", features = ["derive"] }
typetag = "0.2.14"
