# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Ensnare structs that implement the Entity trait"
edition = "2021"
name = "ensnare-entities"
publish = false
version = "0.1.0"

[dependencies]
eframe = "0.23"
ensnare-core = { path = "../core" }
ensnare-egui = { path = "../egui" }
ensnare-entity = { path = "../entity" }
ensnare-proc-macros = { path = "../proc-macros" }
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
typetag = "0.2.13"
