# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-entities"
description = "Ensnare Entities (controllers, effects, and instruments)"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ensnare-entities-factory = { path = "factory", optional = false }
ensnare-entities-test = { path = "test", optional = true }

[features]
factory = []
test = ["ensnare-entities-test"]

[dev-dependencies]
ensnare-core = { path = "../core" }
ensnare-entity = { path = "../entity" }
ensnare-proc-macros = { path = "../proc-macros" }
serde = { version = "1.0.193", features = ["derive"] }
typetag = "0.2.14"
