# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Entity infrastructure"
edition = "2021"
name = "ensnare-entity"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
eframe = "0.24"
ensnare-core = { path = "../core" }
ensnare-cores = { path = "../cores" }
ensnare-egui-widgets = { path = "../egui-widgets" }
ensnare-proc-macros = { path = "../proc-macros" }
once_cell = "1.18.0"
