# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Entity infrastructure"
edition = "2021"
name = "ensnare-entity"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
delegate = "0.12"
derive_more = "0.99.17"
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-proc-macros = { path = "../proc-macros" }
serde = { version = "1.0.193", features = ["derive"] }
typetag = "0.2.14"
