# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-entity"
description = "Entity infrastructure"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
delegate = "0.12"
derive_more = "0.99.17"
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-proc-macros = { path = "../proc-macros" }
serde = { version = "1.0.193", features = ["derive"] }
typetag = "0.2.14"
