[package]
name = "ensnare-new-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
delegate = "0.12"
derivative = "2.2.0"
derive_more = "0.99.17"
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-cores = { path = "../cores" }
ensnare-cores-egui = { path = "../cores-egui" }
ensnare-drag-drop = { path = "../drag-drop" }
ensnare-egui-widgets = { path = "../egui-widgets" }
ensnare-entity = { path = "../entity" }
ensnare-proc-macros = { path = "../proc-macros" }
hound = "3.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.25.2"
thiserror = "1.0.50"
typetag = "0.2.14"

[dev-dependencies]
more-asserts = "0.3.1"
ensnare-entities = { path = "../entities", features = ["factory", "test"] }
ensnare-entities-toy = { path = "../entities-toy" }
