# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-orchestration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# crossbeam = "0.8.2"
# hound = "3.5.0"
# kahan = "0.1.4"
# midly = "0.5.3"
# more-asserts = "0.3.1"
# nalgebra = "0.32.3"
# oorandom = "11.1.3"
# strum = "0.25.0"
# strum_macros = "0.25.2"
# typetag = "0.2.13"
anyhow = "1.0.75"
atomic-counter = "1.0.1"
derive_builder = "0.12.0"
derive_more = "0.99.17"
eframe = "0.22"
ensnare-core = { path = "../core" }
ensnare-entities = { path = "../entities" }
ensnare-proc-macros = { path = "../proc-macros" }
once_cell = "1.18.0"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
