# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Brings everything together to create digital audio"
edition = "2021"
name = "ensnare-orchestration"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
derive_builder = "0.12.0"
eframe = "0.24"
ensnare-core = { path = "../core" }
ensnare-cores = { path = "../cores" }
ensnare-cores-egui = { path = "../cores-egui" }
ensnare-drag-drop = { path = "../drag-drop" }
ensnare-egui-widgets = { path = "../egui-widgets" }
ensnare-entity = { path = "../entity" }
ensnare-proc-macros = { path = "../proc-macros" }
hound = "3.5.0"
rayon = "1.8.0"
strum_macros = "0.25"

[dev-dependencies]
more-asserts = "0.3.1"
ensnare-entities-toy = { path = "../entities-toy" }
ensnare-entities = { path = "../entities", features = ["test"] }
serde = { version = "1.0.193", features = ["derive"] }
