# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Proc macros supporting the ensnare crate"
edition = "2021"
name = "ensnare-proc-macros"
publish = false
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
proc-macro-crate = "1.3"
quote = "1.0"
syn = "1.0"
