# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Proc macros supporting the ensnare crate"
edition = "2021"
name = "ensnare-proc-macros"
publish = false
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.75"
convert_case = "0.6"
proc-macro-crate = "1.3"
quote = "1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
syn = "1.0"

[dev-dependencies]
ensnare-core = { path = "../core" }
