# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Ensnare services"
edition = "2021"
name = "ensnare-services"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
cpal = "0.15.2"
crossbeam = "0.8.3"
crossbeam-channel = "0.5.8"
derivative = "2.2.0"
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-entity = { path = "../entity" }
ensnare-new-stuff = { path = "../new-stuff" }
serde = { version = "1.0", features = ["derive", "rc"] }
