# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-services"
description = "Ensnare services"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
cpal = "0.15.2"
crossbeam = "0.8.3"
crossbeam-channel = "0.5.8"
derivative = "2.2.0"
eframe = "0.25"
ensnare-core = { path = "../core" }
ensnare-entity = { path = "../entity" }
ensnare-new-stuff = { path = "../new-stuff" }
serde = { version = "1.0", features = ["derive", "rc"] }
