# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Entities for development and testing"
edition = "2021"
name = "ensnare-test-entities"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
eframe = "0.23"
ensnare-proc-macros = { path = "../proc-macros" }
ensnare-core = { path = "../core" }
ensnare-entity = { path = "../entity" }
# ensnare-egui-widgets = { path = "../egui-widgets" }
strum_macros = "0.25.2"
