# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Ensnare toy Entities that are included with the crate"
edition = "2021"
name = "ensnare-toy-entities"
publish = false
version = "0.1.0"

[dependencies]
eframe = "0.23"
ensnare-core = { path = "../core" }
ensnare-egui = { path = "../egui" }
ensnare-egui-widgets = { path = "../egui-widgets" }
ensnare-entity = { path = "../entity" }
ensnare-proc-macros = { path = "../proc-macros" }
