# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-toys"
description = "A crate of Ensnare instruments/effects that shows how to make and bundle more things."
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.79"
delegate = "0.12"
eframe = "0.27"
ensnare = { path = "../../ensnare", features = ["egui"] }
ensnare-v1 = { path = "../", features = ["egui"] }
ensnare-proc-macros = { path = "../proc-macros" }
serde = { version = "1.0.193", features = ["derive"] }
typetag = "0.2.14"
