# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
name = "ensnare-entities-factory"
description = "Ensnare Entities that are included with the crate"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
delegate = "0.12"
eframe = "0.25"
ensnare-core = { path = "../../core" }
ensnare-cores = { path = "../../cores" }
ensnare-cores-egui = { path = "../../cores-egui" }
ensnare-entity = { path = "../../entity" }
ensnare-proc-macros = { path = "../../proc-macros" }
serde = "1.0.193"
typetag = "0.2.14"
