# Copyright (c) 2023 Mike Tsao. All rights reserved.

[package]
authors = ["Mike Tsao <mike@sowbug.com>"]
description = "Ensnare test entities"
edition = "2021"
name = "ensnare-entities-test"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
delegate = "0.10.0"
ensnare-core = { path = "../../core" }
ensnare-cores = { path = "../../cores" }
ensnare-entity = { path = "../../entity" }
ensnare-proc-macros = { path = "../../proc-macros" }
serde = "1.0.193"
typetag = "0.2.14"
